--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,16 +1,9 @@
 version: '3.6'
 
 services:
-  dashboard.webapi:
+  studbaza.webapi:
     environment:
       - PORT=5001
     ports:
       - "5001:5001"
-
-  dashboard.web:
-    environment:
-      - PORT=4200
-      - API_HOST=dashboard.webapi:5001
-    ports:
-      - "4200:4200"
 
