--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,10 @@
 version: '3.6'
 
 services:
-  dashboard.webapi:
+  studbaza.webapi:
     image: randomdocker729/cidashboard-webapi:latest
     build:
       context: .
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-
-  dashboard.web:
-    image: randomdocker729/cidashboard-frontend:latest
-    environment:
-      - API_HOST=cidasherapi.herokuapp.com
-    build:
-      context: Dashboard.WebApi/developersDashboardFrontEnd
-      dockerfile: Dockerfile
-    depends_on:
-      - dashboard.webapi
